--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Sasekga Program</title>
+		<title>Sasekga</title>
 	</head>
 	<body>
 		<h1>test page</h1>
